# leann-search-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  main.py
src/api/: documents.py  indexes.py  router.py  search.py
src/schemas/: __init__.py  common.py  document.py  index.py  search.py
src/services/: document_service.py  index_service.py  search_service.py
tests/: conftest.py  test_documents.py  test_indexes.py  test_search.py
